test/regress/kind/nra/invalid/arrowsmith_and_place_fig_3_8_page_82.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:47 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Bool)
   (v2 Bool)
   (v3 Real)
   (v4 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (and (and (not v2) (=  v3 1)) (=  v4 (- 1))))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (and (and (and (or  (=  v2 v2') v1) (or  v1 (or  v2 (and (=  (+  (*  2 v3) (+  (*  v3 (+  v3 (*  2 v4))) (*  (- 2) v3'))) 0) (=  (+  (*  2 v4) (+  (*  v4 (+  v4 (*  2 v3))) (*  (- 2) v4'))) 0))))) (or  v1 (or  (not v2) (and (=  v3 v3') (=  v4 v4'))))) (or  (not v1) (or  (and (=  v4 v4') (and (=  v3 v3') (and v2' (and (not v2) (not (<= 0 v3)))))) (and (=  v4 v4') (and (=  v3 v3') (and v2' (and (not v2) (not (<= v4 0))))))))))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (not v2)
)
